--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -99,6 +99,10 @@ th.edit {
           box-shadow: 0 1px 10px rgba(0, 0, 0, 0.25);
 }
 
+a.brand.topleftimage{
+	float: left;
+}
+
 .inputheader {
 	font-size: 10px;
 }
