--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,12 @@
 	      </a>
 		  <%= link_to "TimeFeather", root_url, :class => "brand topleftimage" %>
 	      <div class="nav-collapse">
-	        <ul class="nav pull-right">
+			<ul class="nav pull-right">
+	
+			<% if signed_in? %>
+		  	
+			<!-- USER IS SIGNED IN -->
+	        
 	          <li class="dropdown">
 	  			   	<a href="#Projects" class="dropdown-toggle" data-toggle="dropdown">
 						Projects
@@ -26,17 +31,17 @@
 						
 	  			   	<ul class="dropdown-menu">
 	    	 		  	<li>
-							<%= link_to dashboard_path do %>
+							<%= link_to root_url do %>
 								<i class="icon-list"></i> Entries
 							<% end %>
 						</li>
 	    			  	<li>
-							<%= link_to dashboard_path do %>
+							<%= link_to root_url do %>
 								<i class="icon-calendar"></i> Calendar
 							<% end %>
 						</li>	
 	    			  	<li>
-							<%= link_to dashboard_path do %>
+							<%= link_to root_url do %>
 								<i class="icon-signal"></i> Trends
 							<% end %>
 						</li>
@@ -47,14 +52,23 @@
 						<%= current_user.name %>
 					<b class="caret"></b></a>
 	  			   	<ul class="dropdown-menu">
-	    	 		  <li><a href="#"><i class="icon-inbox"></i> Notifications</a></li>
-	    			  <li><a href="#"><i class="icon-user"></i> Account</a></li>	
-	    			  <li><a href="#"><i class="icon-off"></i> Log Out</a></li>
+	    	 		  	<li><a href="#"><i class="icon-inbox"></i> Notifications</a></li>
+	    			  	<li>
+							<%= link_to account_path do %>
+								<i class="icon-user"></i> Account
+							<% end %>
+						</li>	
+	    			  	<li>
+							<%= link_to logout_path do %>
+								<i class="icon-off"></i> Log Out
+							<% end %>
+						
+						</li>
 		         	</ul>
 		        </li> <!-- dropdown -->
 		        <li class="dropdown">
 	  			   	<a href="#Contact" class="dropdown-toggle" data-toggle="dropdown">
-						Contact
+						Help
 					<b class="caret"></b></a>
 	  			   	<ul class="dropdown-menu">
 	    	 		  <li><a href="#"><i class="icon-question-sign"></i> FAQ</a></li>
@@ -62,13 +76,38 @@
 	    			  <li><a href="#"><i class="icon-leaf"></i> About</a></li>
 		         	</ul>
 		        </li> <!-- dropdown -->
-	        </ul>
-	      </div><!--/.nav-collapse -->
+	        
+	      
+		
+			<% else %>
+			
+			<!-- USER SIGNED OUT -->
+	
+				<li class="dropdown">
+	  			   	<a href="#Contact" class="dropdown-toggle" data-toggle="dropdown">
+						Help
+					<b class="caret"></b></a>
+	  			   	<ul class="dropdown-menu">
+	    	 		  <li><a href="#"><i class="icon-question-sign"></i> FAQ</a></li>
+	    			  <li><a href="#"><i class="icon-comment"></i> Contact Us</a></li>	
+	    			  <li><a href="#"><i class="icon-leaf"></i> About</a></li>
+		         	</ul>
+		        </li> <!-- dropdown -->
+				<li class="dropdown">
+					<%= link_to "Login", login_path, :class => "dropdown-toggle" %>
+		        </li> <!-- dropdown -->
+	
+			<% end %>
+		
+				</ul>
+			</div><!--/.nav-collapse -->
 	    </div>
 	  </div>
 	</div>
 
-	
+	<% flash.each do |key, value| %>
+		<div class="flash <%= key %>"><%= value %></div>
+	<% end %>
 
 
 <%= yield %>
