--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -2,49 +2,9 @@
  
   <div class="leftside span8">
     
-    <div class="newentry">
-      <form class="form-inline">
-        <!-- <div class="row">
-          <div class="span4">
-            <textarea class="span4" type="text" name="note" id="note" placeholder="note"></textarea>
-          </div>
-          <div class="span4">
-          </div>  
-        
-        
-        
-        </div> -->
-        
-        <div class="span2 projectinput"><select class="span2" name="project">
-          <option value="User1">User1</option>
-          <option value="User2">User2</option>
-          <option value="User3">User3</option>
-          <option value="User4">User4</option>
-          <option value="User5">User5</option>
-        </select></div>
-        <div class="span2"><select class="span2" name="project">
-          <option value="Project1">Project1</option>
-          <option value="Project2">Project2</option>
-          <option value="Project3">Project3</option>
-          <option value="Project4">Project4</option>
-          <option value="Project5">Project5</option>
-          <option value="Project6">Project6</option>
-          <option value="Project7">Project7</option>
-          <option value="Project8">Project8</option>
-          <option value="Project9">Project9</option>
-          <option value="Project10">Project10</option>
-          <option value="Project11">Project11</option>
-        </select></div>
-        
-        
-        <div class="spanonefive"><input class="datedropdown" type="date" name="entrydate" id="entrydate" placeholder="8/4/2012"></div>
-        
-        
-        <div class="span1"><input class="span1" type="text" name="hours" id="hours" placeholder="hours"></div>
-        <div class="span1"><input type="submit" name="submitentry" id="submitentry" class="btn btn-warning" value="Submit"></div>
-        <textarea class="span6" type="text" name="note" id="note" placeholder="note"></textarea>
-      </form>        
-    </div><!-- NewEntry -->
+
+	<%= render :partial => "entries/form" %>
+    
 
     <div class="viewselect">
       <div data-toggle="buttons-radio">
@@ -54,57 +14,9 @@
       </div>
     </div><!-- ViewSelect -->
     
-    <div class="details">
-      <div><p class="totalrow">9.3 hours</p></div>
-      <!-- Project List -->
-			<table class="table table-bordered table-condensed">
-			  <thead>
-			    <tr>
-			      <th><p>Date</p></th>
-				    <th><p>User</p></th>
-			      <th><p>Project</p></th>
-				    <th><p>Hours</p></th>
-			      <th><p>Description</p></th>
-				    <th class="edit"><p>Edit</p></th>
-			    </tr>
-			  </thead>
-			  <tbody>
-			    <tr>
-			      <td>6/20/2012</td>
-			      <td>euggra</td>
-				    <td>1871 App</td>
-				    <td>0.3</td>
-  				  <td>Interviewed for the team to work evenings/weekends @ 1871</td>
-  				  <td>
-  				    <a href="#" class="tips" rel="tooltip" title="Edit Entry"><i class="icon-pencil"></i></a>
-  				    <a href="#" class="tips" rel="tooltip" title="Delete Entry"><i class="icon-remove"></i></a>
-            </td>
-			    </tr>
-			    <tr>
-			      <td class="entriesdate">6/20/2012</td>
-			      <td class="entriesuser">euggra</td>
-  				  <td>ClockRaven</td>
-  				  <td>1</td>
-  				  <td>Changed the table feature on projectlist.html page to an actual html table instead of a number of divs (that were impossible to control)</td>
-  				  <td>
-  				    <a href="#" class="tips" rel="tooltip" title="Edit Entry"><i class="icon-pencil"></i></a>
-  				    <a href="#" class="tips" rel="tooltip" title="Delete Entry"><i class="icon-remove"></i></a>
-            </td>
-			    </tr>
-			    <tr>
-			      <td>6/30/2012</td>
-			      <td>mmosche</td>
-				    <td>CLSC</td>
-				    <td>8</td>
-  				  <td>Sat in class ALLLL DAYYY on a saturday and learned about staying lean (in a company sense of the word)</td>
-  				  <td>
-  				    <a href="#" class="tips" rel="tooltip" title="Edit Entry"><i class="icon-pencil"></i></a>
-  				    <a href="#" class="tips" rel="tooltip" title="Delete Entry"><i class="icon-remove"></i></a>
-            </td>
-			    </tr>
-			  </tbody>
-			</table>
-    </div><!-- details -->
+	<div class="details" id="entrytable">
+		<%= render :partial => "entries/entries_table" %>
+	</div><!-- details -->
   
   </div><!-- LeftSide -->
 
@@ -136,18 +48,23 @@
     </div><!-- Feedback --> 
 
 
-	<%= form_tag new_entry_path, :method => 'get' do %>
+	<%= form_tag root_url, :method => 'get' do %>
     <div class="filterdata">
       <div class="row dateselect">
         <form class="form-inline">
-          <div class="span1"><label for="startdate">From</label></div>
           <div class="span1">
-				<%= text_field(:from, '', :default => @myfrom, :class => "span1", :id => "startdate") %>
+				<label for="startdate">From</label>
+				<%= text_field(:from, '', :value => @myfrom.strftime('%h %-d %Y'), 
+					:class => "span1", :id => "startdate") %>
 		  </div>
-          <div class="span1"><label for="enddate">To</label></div>
           <div class="span1">
-		  		<%= text_field(:to, '', :default => @myto, :class => "span1", :id => "enddate") %>	
+				<label for="enddate">To</label>
+		  		<%= text_field(:to, '', :value => @myto.strftime('%h %-d %Y'), 
+					:class => "span1", :id => "enddate") %>	
 		  </div>
+		  <div class="span1">
+				<%= submit_tag "Select", :name => nil %>
+		 </div>
          </form>
       </div>
 	  <% end %>
@@ -161,7 +78,7 @@
 			
 			<% @projects.each do |p| %>	
 	          <label>
-				<input type="checkbox" name="project" value="<%= p[0] %>"> <%= p[0] %> (<%= p[3] %>)
+				<input type="checkbox" name="project" value="<%= p[0] %>" /> <%= p[0] %> (<%= p[2] %>)
 			  </label>
   			<% end %>
                   
@@ -173,7 +90,7 @@
 			
 			<% @employees.each do |u| %>
           	  <label>
-				<input type="checkbox" name="user" value="<%= u[2] %>"> <%= u[2] %>  (<%= u[3] %>)
+				<input type="checkbox" name="user" value="<%= u[0] %>" /> <%= u[0] %>  (<%= u[2] %>)
 			  </label>
 			<% end %>
                              
