--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,30 +1,6 @@
-<%= form_for @company do |c| %>  
+<%= simple_form_for @company do |c| %>  
 
-<%= render 'shared/error_messages', :object => c.object %>
+	<%= c.input :name %>  	
+	<%= c.button :submit %>
 
-	<div class="field">  
-		<%= c.label "Company name" %>  <br />
-		<%= c.text_field :name %>  
-	</div>  	  
-	
-	<%= c.fields_for :users do |u| %>
-		<div class="field">
-	    	<%= u.label "Your email" %><br />
-	    	<%= u.text_field :email %>
-	  	</div>
-	  	<div class="field">
-	    	<%= u.label :password %><br />
-	    	<%= u.password_field :password %>
-	  	</div> 
-	  	<div class="field">
-	    	<%= u.label :password_confirmation %><br />
-	    	<%= u.password_field :password_confirmation %>
-	  	</div>
-		<%= u.hidden_field :name, :value => "blank" %>
-
-	<% end %>
-	
-	<div class="actions">
-		<%= c.submit "Create" %>
-	</div>  
 <% end %>
