--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,28 +1,16 @@
-<%= form_for @user do |f| %>
+<%= simple_form_for @user do |f| %>
 
-<%= render 'shared/error_messages', :object => f.object %>
+<h1>Company = <%= @company.name %></h1>
 
-  <% if @type == "edit" %>
-  	<div class="field">
-	    <%= f.label :name %>
-	    <%= f.text_field :name %>
-	  </div>
-  <% end %>	
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <%= f.hidden_field :company_id, :value => current_user.company.id %>
-	
-  <div class="actions"><%= f.submit "Submit" %></div>
+	<%= f.error_notification %>
+	<%= f.input :name %>
+    <%= f.input :email %>
+    <%= f.input :password %>
+    <%= f.input :password_confirmation, :required => true %>
+  	<%= f.hidden_field :company_id, :value => @company.id %>
+	<%= f.error :base %>
+	<%= f.button :submit %>
+
 <% end %>
 
 
