--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,4 +1,4 @@
-<!--
+
 <div class="newentry">
   <%= form_for(@entry, :class => "form-inline") do |f| %>
 
@@ -10,63 +10,63 @@
     </div>
     
     <div class="spanonefive">
-		<%= f.text_field :cal_date, { :class => "datedropdown", :id =>"newentry_caldate", 
-				:value => @today.to_s(:dmdy) } %>
-	</div>
+    <%= f.text_field :cal_date, { :class => "datedropdown", :id =>"newentry_caldate", 
+        :value => @today.to_s(:dmdy) } %>
+  </div>
     
     <div class="span1">
-		<%= f.text_field :hours, { :class => "span1", :placeholder => "hours" } %>
-	</div>
+    <%= f.text_field :hours, { :class => "span1", :placeholder => "hours" } %>
+  </div>
     
-	<div class="span1">
-		<%= f.submit "Submit", :class => "btn btn-warning" %>
-	</div>
+  <div class="span1">
+    <%= f.submit "Submit", :class => "btn btn-warning" %>
+  </div>
     
-	 <%= f.text_area :notes, { :class => "span6", :placeholder => "note", :rows => 2 } %>
+   <%= f.text_area :notes, { :class => "span6", :placeholder => "note", :rows => 2 } %>
   
   <% end %>
   
-</div> NewEntry -->
+</div> <!-- NewEntry -->
 
-<div class="newentry">
-	
+<!-- <div class="newentry">
+  
   <%= simple_form_for(@entry, :class => "form-inline") do |f| %>
 
-	<%= f.association :user, 
-					  :collection => @employees, 
-					  :selected => @user.id, 
-					  :label => false, 
-					  :input_html => { :class => "span2" },
-					  :wrapper_html => { :class => 'span2 projectinput' } %>
-	
-	<%= f.association :project, 
-					  :collection => @projects,
-					  :selected => @projects.first,
-					  :label => false, 
-	 				  :input_html => { :class => "span2" },
-	 				  :wrapper_html => { :class => 'span2' }%>	
-	
-	<%= f.input :cal_date, 
-				:as => :string, 
-				:label => false,  
-			    :input_html => { :class => "datedropdown span2", 
-								 :id =>"newentry_caldate", 
-					  			 :value => @today.to_s(:dmdy) },
-				:wrapper_html => { :class => 'spanonefive' } %>
+  <%= f.association :user, 
+            :collection => @employees, 
+            :selected => @user.id, 
+            :label => false, 
+            :input_html => { :class => "span2" },
+            :wrapper_html => { :class => 'span2 projectinput' } %>
+  
+  <%= f.association :project, 
+            :collection => @projects,
+            :selected => @projects.first,
+            :label => false, 
+            :input_html => { :class => "span2" },
+            :wrapper_html => { :class => 'span2' }%>  
+  
+  <%= f.input :cal_date, 
+        :as => :string, 
+        :label => false,  
+          :input_html => { :class => "datedropdown span2", 
+                 :id =>"newentry_caldate", 
+                   :value => @today.to_s(:dmdy) },
+        :wrapper_html => { :class => 'spanonefive' } %>
 
- 	<%= f.input :hours, 
-				:label => false, 
-				:input_html => { :class => "span1", :placeholder => "hours" },
-				:wrapper_html => { :class => 'span1' } %>
+  <%= f.input :hours, 
+        :label => false, 
+        :input_html => { :class => "span1", :placeholder => "hours" },
+        :wrapper_html => { :class => 'span1' } %>
 
-	 <%= f.input :notes, 
-				 :label => false, 
-				 :input_html => { :class => "span6", :placeholder => "note", :rows => 2 },
-				 :wrapper_html => { :class => 'span6 no_margin' } %>
-	
-	 <%= f.submit "Add",
-			 	  :class => 'btn btn-warning add-entry-btn' %>				
+   <%= f.input :notes, 
+         :label => false, 
+         :input_html => { :class => "span6", :placeholder => "note", :rows => 2 },
+         :wrapper_html => { :class => 'span6 no_margin' } %>
+  
+   <%= f.submit "Add",
+          :class => 'btn btn-warning add-entry-btn' %>        
 
   <% end %>
 
-</div>
+</div> -->
