--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,8 +5,12 @@
 	<%= f.error_notification %>
 	<%= f.input :name %>
     <%= f.input :email %>
+<% if @type == "edit" %>
+	<%= f.input :start_date, :as => :string,
+	 			:input_html => { :id => "UserStartDate", :value => @startdate } %>
+<% end %>
     <%= f.input :password %>
-    <%= f.input :password_confirmation, :required => true %>
+    <%= f.input :password_confirmation %>
   	<%= f.hidden_field :company_id, :value => @company.id %>
 	<%= f.error :base %>
 	<%= f.button :submit %>
