--- a/app/views/entries/_entries_table.html.erb
+++ b/app/views/entries/_entries_table.html.erb
@@ -22,7 +22,8 @@
 												  :collection => @editableemployees %> </td>
 				    <td> <%= best_in_place entry, :project_id, :type => :select, :inner_class => "span2", 
 												  :collection => @editableprojects %> </td>
-				    <td> <%= best_in_place entry, :hours, :inner_class => "span1" %> </td>
+				    <td> <span class="bip-hours-wrapper"><%= best_in_place entry, :hours, :inner_class => "span1",
+				 											 :data => {:entry_hours => entry.user_id} %></span> </td>
   				  	<td> <%= best_in_place entry, :notes, :type => :textarea, :nil => "empty" %> </td>
   				  	<td>
 
