ajax-ed some more stuff
Fixed the best_in_place update issue so the total hours is now updated
and added entries/calendar button

--- a/app/views/entries/entrycalendar.js.erb
+++ b/app/views/entries/entrycalendar.js.erb
@@ -1,2 +1,9 @@
+$("#entrytable").hide();
+$("#entrytable_sum").hide();
+
+
 $("#entrycalendar").html("<%= escape_javascript( render('entries/entries_calendar') )%>");
 $("#entrycalendar_sum").html("<p class='totalrow'><%= escape_javascript( @cal_month_sum.to_s) %> hours</p>");
+
+$("#entrycalendar").show();
+$("#entrycalendar_sum").show();
