--- a/app/views/entries/entrytable.js.erb
+++ b/app/views/entries/entrytable.js.erb
@@ -1,10 +1,26 @@
-$("#entrytable").html("<%= escape_javascript( render('entries/entries_table') )%>");
+$("#entrycalendar").hide();
+$("#entrycalendar_sum").hide();
 
-$('.best_in_place').bind("ajax:success", function(){
+$("#entrytable").html("<%= escape_javascript( render('entries/entries_table') )%>");
+$("#entrytable_sum").html("<p class='totalrow'><%= escape_javascript( @hrs_sum.to_s) %> hours</p>");
+
+$("#entrytable").show();
+$("#entrytable_sum").show();
+
+
+
+$('.best_in_place').bind("ajax:success", function(xhr, data){
 	// highlight effect
 	$(this).closest('tr').effect('highlight');
 	
-	// this calls entries#updatejs, which calls entries/update.js.erb
-	$.getScript('entries/update.js.erb');	
+	//alert($(this).data('entryHours'));
+});
 
+$('.bip-hours-wrapper .best_in_place').bind("ajax:success", function(xhr, data){
+	mydata = JSON.parse(data);
+	newhours = mydata.hours;
+	console.log(newhours);
+
+	hours_sum = mydata.hrs_sum;
+	$("div#entrytable_sum").html('<p class="totalrow">' + hours_sum + ' hours</p>');
 });
