--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -9,9 +9,21 @@
 
     <div class="viewselect">
       <div data-toggle="buttons-radio">
-        <button id="EntriesTable_btn" class="btn btn-info">Entries</button>
-        <button id="EntriesCalendar_btn" class="offsethalf btn btn-info">Calendar</button>
+	
+		<%= link_to "Entries", entrytable_path(:sort => "cal_date", :direction => "desc",
+											   :myfrom => @myfrom, :myto => @myto, 
+											   :filter_projects => @filter_projects,
+											   :filter_employees => @filter_employees), 
+					:remote => true, :id => "EntriesTable_btn", :class => "btn btn-info" %>
+
+		<%= link_to "Calendar", entrycalendar_path(:sort => "cal_date", :direction => "desc",
+											   :myfrom => @myfrom, :myto => @myto, 
+											   :filter_projects => @filter_projects,
+											   :filter_employees => @filter_employees), 
+					:remote => true, :id => "EntriesCalendar_btn", :class => "offsethalf btn btn-info" %>
+					
         <button id="EntriesTrends_btn" class="offsethalf btn btn-info">Trends</button>
+
       </div>
     </div><!-- ViewSelect -->
     
