--- a/app/views/entries/_entries_table.html.erb
+++ b/app/views/entries/_entries_table.html.erb
@@ -23,7 +23,11 @@
 				    <td> <%= best_in_place entry, :project_id, :type => :select, :inner_class => "span2", 
 												  :collection => @editableprojects %> </td>
 				    <td> <span class="bip-hours-wrapper"><%= best_in_place entry, :hours, :inner_class => "span1",
-				 											 :data => {:entry_hours => entry.user_id} %></span> </td>
+															 :path => entry_path(:id => entry.id, :shouldupdate => 1,
+																				 :myfrom => @myfrom, :myto => @myto, 
+			                                   									 :filter_projects => @filter_projects,
+			                                   									 :filter_employees => @filter_employees),
+				 											 :data => {:entry_hours => entry.hours.to_s} %></span> </td>
   				  	<td> <%= best_in_place entry, :notes, :type => :textarea, :nil => "empty" %> </td>
   				  	<td>
 
