--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -734,7 +734,7 @@ fieldset {
 
 legend {
   display: block;
-  width: 100%;
+  /*width: 100%; Edited out by Eugene*/
   padding: 0;
   margin-bottom: 27px;
   font-size: 19.5px;
