--- a/app/views/entries/entrytable.js.erb
+++ b/app/views/entries/entrytable.js.erb
@@ -1,11 +1,12 @@
-$("#entrycalendar").hide();
-$("#entrycalendar_sum").hide();
+$("#entrycalendar").addClass('hidden');
+$("#entrycalendar_sum").addClass('hidden');
+$('#entrytrends').addClass('hidden');
 
 $("#entrytable").html("<%= escape_javascript( render('entries/entries_table') )%>");
 $("#entrytable_sum").html("<p class='totalrow'><%= escape_javascript( @hrs_sum.to_s) %> hours</p>");
 
-$("#entrytable").show();
-$("#entrytable_sum").show();
+$("#entrytable").removeClass('hidden');
+$("#entrytable_sum").removeClass('hidden');
 
 
 
@@ -19,8 +20,17 @@ $('.best_in_place').bind("ajax:success", function(xhr, data){
 $('.bip-hours-wrapper .best_in_place').bind("ajax:success", function(xhr, data){
 	mydata = JSON.parse(data);
 	newhours = mydata.hours;
-	console.log(newhours);
-
 	hours_sum = mydata.hrs_sum;
+	user_id = mydata.user_id;
+	user_name = mydata.user_name;
+	user_sum = mydata.user_sum;
+	project_id = mydata.project_id;
+	project_name = mydata.project_name;
+	project_sum = mydata.project_sum;
+	
+	
 	$("div#entrytable_sum").html('<p class="totalrow">' + hours_sum + ' hours</p>');
+	
+	$("#filter_employees_"+user_id+"_text").html(user_name+' ('+user_sum+')');
+	$("#filter_projects_"+project_id+"_text").html(project_name+' ('+project_sum+')');
 });
