--- a/app/views/entries/update.json.erb
+++ b/app/views/entries/update.json.erb
@@ -1,4 +1,10 @@
 {
     "hours": "<%= @entry.hours %>",
-	"hrs_sum": "<%= @hrs_sum %>"
+	"hrs_sum": "<%= @hrs_sum %>",
+	"user_id": "<%= @entry.user_id %>",
+	"user_name": "<%= @user.name %>",
+	"user_sum": "<%= @user_sum %>",
+	"project_id": "<%= @entry.project_id %>",
+	"project_name": "<%= @project.name %>",
+	"project_sum": "<%= @project_sum %>"
 }
