--- a/app/views/projects/_filterlist.html.erb
+++ b/app/views/projects/_filterlist.html.erb
@@ -2,6 +2,6 @@
   <label>
 	      <%= check_box(:filter, :projects, {:multiple => true, 
 						:checked => @filter_projects.include?(p[3].to_s)}, p[3], nil)%>
-	      <span id="filter_projects_<%= p[3] %>_text"> <%= p[0] %> (<%= p[2] %>) </span>
+	      <span id="filter_projects_<%= p[3] %>_text"> <%= link_to p[0], project_path(p[3]) %> (<%= p[2] %>) </span>
       </label>
 <% end %>
