reorganized main page again; added new query colors

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -18,6 +18,8 @@ div.column-right{
 	height: 60px;
 }
 
-.submitbutton {
-  height: 46px;
+.pullright {
+  text-align: right;
+  line-height: 10px;
+  margin-bottom: 0px;
 }
