--- a/app/assets/stylesheets/companies.css.scss
+++ b/app/assets/stylesheets/companies.css.scss
@@ -2,15 +2,31 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.viewselect {
-	text-align: center;
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	border-bottom: 1px solid #D0D2D5;
-	
+.titleitem {
+  text-decoration: underline;
+  text-align: center;
 }
 
-.filterform {
-  text-align: center;
-  margin-bottom: 10px;
+.datatable {
+  margin-left: 10px;
+  padding: 15px;
+  border-top: 1px solid #D0D2D5;
+  border-right: 1px solid #D0D2D5;
+  border-bottom: 1px solid #D0D2D5;
+}
+
+.formfilter {
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  
+  border-top: 1px solid #D0D2D5;
+  border-left: 1px solid #D0D2D5;
+  border-bottom: 1px solid #D0D2D5;
+  
+}
+
+.feedbackbox {
+  padding-left: 10px;
+  border-right: 1px solid #D0D2D5;
 }
