--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -48,26 +48,14 @@
         </div></div> <!-- filterform -->
        
 
-        <div class="row themecolor">  <!-- Filters the project and employees -->
-          <div class="span2"><!-- List Projects -->
-            <div class="centertext"><p>Projects</p></div>
-            <% @projects.each do |p| %>	
-              <label>
-    			      <%= check_box(:filter, :projects, {:multiple => true, :checked => @filter_projects.include?(p[3].to_s)}, p[3], nil)%>
-    			      <%= p[0] %> (<%= p[2] %>)
-    		      </label>
-    			  <% end %>
+        <div class="row themecolor"> 
+          <div id="listFilterProjects" class="span2"><!-- List Projects -->
+			      <%= render 'projects/filterlist' %>
           </div> <!-- List Projects -->
-          <div class="span2"><!-- List Employees -->   
-    		  	<div class="centertext"><p>Employees</p></div>
-    		  	<% @employees.each do |u| %>
-            	<label>
-    			      <%= check_box(:filter, :employees, {:multiple => true, :checked => @filter_employees.include?(u[3].to_s)}, u[3], nil)%>
-    			      <%= u[0] %>  (<%= u[2] %>)
-    		      </label>
-    		    <% end %>
+          <div id="listFilterEmployees" class="span2"><!-- List Employees -->   
+			      <%= render 'users/filterlist' %>
           </div><!-- List Employees -->      
-        </div> <!-- ProjectList Row -->
+      </div> <!-- ProjectList Row -->
       
 
     	<% end %>
@@ -92,7 +80,7 @@
       											   :filter_employees => @filter_employees), 
       					:remote => true, :id => "EntriesCalendar_btn", :class => "offset1 btn btn-info" %>
 
-<<<<<<< HEAD
+
 			<%= link_to "Trends", entrytrends_path(:sort => "cal_date", :direction => "desc",
       											   :myfrom => @myfrom, :myto => @myto, 
       											   :filter_projects => @filter_projects,
@@ -100,59 +88,16 @@
       					:remote => true, :id => "EntriesTrends_btn", :class => "btn btn-info" %>
           
           
-=======
-          <button id="EntriesTrends_btn" class="offset1 btn btn-info">Trends</button>
->>>>>>> reorganized main page again; added new query colors
         </div>
       </div> <!-- ViewSelect -->      
       
-<<<<<<< HEAD
-        <div class="filterform">
-            <label for="startdate">From</label>
-  			    <%= text_field(:from, '', :value => @myfrom.strftime('%h %-d %Y'), :class => "span1", :id => "startdate") %>
-            <label for="enddate">To</label>
-  	  		  <%= text_field(:to, '', :value => @myto.strftime('%h %-d %Y'), :class => "span1", :id => "enddate") %>
-        </div> <!-- filterform -->
-
-        <div class="row projectlist"> 
-          <div id="listFilterProjects" class="span2"><!-- List Projects -->
-
-
-			<%= render 'projects/filterlist' %>
-
-
-          </div> <!-- List Projects -->
-          <div id="listFilterEmployees" class="span2"><!-- List Employees -->   
-  			  
-
-			<%= render 'users/filterlist' %>
-
-
-          </div><!-- List Employees -->      
-      </div> <!-- ProjectList Row -->
-        
-      <div>
-		    <%= submit_tag "Filter Data", :name => nil , :class => "btn btn-info span4"%>
-      </div>
-        
-      </div> <!-- filterdata --> <!-- Why do I absolutely need this div for the sectinos to work? -->  
-
-    	<% end %>
-
-	  </div> <!-- Filter Data  Section-->
-	  
+             
 	  <div class="span8 details"> <!-- Details -->
-	    
-    	<div class="selectdetails">
-        	<div id="entrytable_sum">
-          		<p class="totalrow"><%= @hrs_sum %> hours</p>
-        	</div> 
-=======
+
       <div class="selectdetails">
     	  <div id="entrytable_sum">
             <p class="totalrow"><%= @hrs_sum %> hours</p>
         </div>
->>>>>>> reorganized main page again; added new query colors
     		<div id="entrytable">
     			<%= render :partial => "entries/entries_table" %>
     		</div>
@@ -162,8 +107,6 @@
     		<div id="entrycalendar" class="hidden">
     			<%= render :partial => "entries/entries_calendar" %>
     		</div>
-<<<<<<< HEAD
-
     		<div id="entrytrends" class="hidden">
     			<%= render :partial => "entries/entries_trends" %>
     		</div>
@@ -172,23 +115,5 @@
 	  </div> <!-- Details -->
 	
 	</div> <!-- Filter Data, Details --> 
-=======
-    	</div><!-- selectdetails -->
-    
-    
-    </div>
-  
-  </div>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
->>>>>>> reorganized main page again; added new query colors
 
 </div></div><!--/.container-fluid, row-->
