--- a/app/views/entries/_entries_table.html.erb
+++ b/app/views/entries/_entries_table.html.erb
@@ -1,10 +1,13 @@
 <table class="table table-bordered table-condensed">
   <thead>
     <tr>	
-      <th><p><%= sortable "cal_date", "Date" %></p></th>
-	    <th><p><%= sortable "name", "User" %></p></th>
-      <th><p><%= sortable "project_id", "Project" %></p></th>
-      <th><p><%= sortable "notes", "Description" %></p></th>
+      	<th><p><%= sortable "cal_date", "Date" %></p></th>
+	    <% if !@is_user_page %>
+			<th><p><%= sortable "name", "User" %></p></th>
+      	<% else %>
+			<th><p><%= sortable "project_id", "Project" %></p></th>
+		<% end %>
+      	<th><p><%= sortable "notes", "Description" %></p></th>
 	    <th><p><%= sortable "hours" %></p></th>
 	    <th></th>
     </tr>
@@ -14,27 +17,33 @@
     <tr>
       	<td> <%= best_in_place entry, :cal_date, :type => :date, 
 									  :display_as => :mdmy_format,
-									  :inner_class => "span2 mdmy_format" %> </td>
-      	<td> <%= best_in_place entry, :user_id, :type => :select, :inner_class => "span2",
-									  :collection => @editableemployees %> </td>
-	      <td> <%= best_in_place entry, :project_id, :type => :select, :inner_class => "span2", 
-									  :collection => @editableprojects %> </td>
-	      <td> <%= best_in_place entry, :notes, :type => :textarea, :nil => "empty" %> </td>
-		  <td> <span class="bip-hours-wrapper"><%= best_in_place entry, :hours, :inner_class => "span1",
+									  :inner_class => "span2 mdmy_format" %> 
+		</td>
+		<% if !@is_user_page %>
+      		<td> <%= best_in_place entry, :user_id, :type => :select, :inner_class => "span2",
+									  :collection => @editableemployees %> 
+			</td>
+		<% else %>
+	    	<td> <%= best_in_place entry, :project_id, :type => :select, :inner_class => "span2", 
+									  :collection => @editableprojects %>
+			</td>
+		<% end %>
+	    <td> <%= best_in_place entry, :notes, :type => :textarea, :nil => "empty" %> 
+		</td>
+		
+		<td> <span class="bip-hours-wrapper"><%= best_in_place entry, :hours, :inner_class => "span1",
 		  	                 :path => entry_path(:id => entry.id, :shouldupdate => 1,
-									                   :myfrom => @myfrom, :myto => @myto, 
-                   									 :filter_projects => @filter_projects,
-                   									 :filter_employees => @filter_employees),
-	 											 :data => {:entry_hours => entry.user_id} %></span> </td>
+							 :myfrom => @myfrom, :myto => @myto, 
+                   			 :filter_projects => @filter_projects,
+                   			 :filter_employees => @filter_employees),
+	 						 :data => {:entry_hours => entry.user_id} %></span> 
+		</td>
         
-		  	<td>
-          <!-- EDIT IS NO LONGER NEEDED					
-					<%= link_to(edit_entry_path(entry.id), :class => "tips", :title => "Edit Entry") do %>
-						<i class="icon-pencil"></i>
-					<% end %> -->
-		    	
-		    	   <%= link_to(entry, confirm: 'Are you sure?', method: :delete, 
-					          :class => "tips", :title => "Delete Entry") do %><i class="icon-remove"></i><% end %></td>
+		<td> <%= link_to(entry, confirm: 'Are you sure?', method: :delete, 
+					         :class => "tips", :title => "Delete Entry") do %>
+					<i class="icon-remove"></i>
+			 <% end %>
+		</td>
     </tr>
 
 	<% end %>
