--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,58 +1,147 @@
-<p>Project: <%= @project.name %></p>
+<div class="container mainpage">
+  
+  
+  <div class="row"> <!-- New Entry -->  
+	  <div class="span12"><%= render :partial => "entries/form" %></div>
+  </div>
 
 
-<!-- ADD EMPLOYEE TO PROJECT -->
-<p id="StaffEmployeeForm_btn" class="btn">Add Employee to Project</p>
-<div id="StaffEmployeeForm">
-	<!-- Is there any affect when using current_user here? -->
-	<%= simple_form_for(@relationship) do |f| %>
-		<%= f.hidden_field :project_id, :value => @project.id %>
-		<%= f.association :user, :collection => @notstaffed_employees, :selected => @notstaffed_employees.first  %>
-		<%= f.input :rate %>
-		<%= f.input :staffing_start, :as => :string,
-		 			:input_html => { :id => "StaffingStartDate" } %>
-		<%= f.input :staffing_end, :as => :string,
-					 			:input_html => { :id => "StaffingEndDate" } %>
-		<%= f.input :budgeted_hrs, :label => 'Budgeted Hours' %>
-	  	<%= f.submit "Add to Staff", :class => 'btn btn-large btn-primary' %>
-	<% end %>
-</div>
 
-<!-- LIST STAFFED EMPLOYEES -->
-<h2 id="ProjectStaffCount">Staff - <%= @staff.count %> </h2>
-<table class="table table-bordered table-condensed">
-  <thead>
-    <tr>	
-      	<th><p>Employee</p></th>
-	    <th><p>Rate</p></th>
-      	<th><p>Start Date</p></th>
-      	<th><p>End Date</p></th>
-	    <th><p>Budgeted Hours</p></th>
-	    <th><p>Actual Hours</p></th>
-	    <th></th>
-    </tr>
-  </thead>
-  <tbody>
-	<% @staff.each do |s| %>
-    <tr>
-									
-      	<td> <%= s.user.name %></td>
-      	<td> <%= best_in_place s, :rate %></td>
-	    <td> <%= best_in_place s, :staffing_start, :type => :date %></td>
-	    <td> <%= best_in_place s, :staffing_end, :type => :date %></td>
-		<td> <%= best_in_place s, :budgeted_hrs %></td>
-		<td> <%= (hr_sum = @user_entries.find{|e| e.user_id == s.user_id}) ? hr_sum.hours_sum : 0 %></td>
-		<td>
-			<%= link_to(s, confirm: 'Are you sure?', method: :delete, 
-					    :class => "tips", :title => "Remove") do %><i class="icon-remove"></i><% end %></td>
-
-    </tr>
-
-	<% end %>
-  </tbody>
-</table>
+	<!-- ADD EMPLOYEE TO PROJECT -->
+	<p id="StaffEmployeeForm_btn" class="btn">Add Employee to Project</p>
+	<div id="StaffEmployeeForm">
+		<!-- Is there any affect when using current_user here? -->
+		<%= simple_form_for(@relationship) do |f| %>
+			<%= f.hidden_field :project_id, :value => @project.id %>
+			<%= f.association :user, :collection => @notstaffed_employees, :selected => @notstaffed_employees.first  %>
+			<%= f.input :rate %>
+			<%= f.input :staffing_start, :as => :string,
+			 			:input_html => { :id => "StaffingStartDate" } %>
+			<%= f.input :staffing_end, :as => :string,
+						 			:input_html => { :id => "StaffingEndDate" } %>
+			<%= f.input :budgeted_hrs, :label => 'Budgeted Hours' %>
+		  	<%= f.submit "Add to Staff", :class => 'btn btn-large btn-primary' %>
+		<% end %>
+	</div>
 	
-<h1>Last Month Invoice Amount = <%= @prev_month_sum %></h1>
-<% @prev_month_entries.each do |e| %>
-	<p><%= e.user.name %> - <%= e.hours_sum %></p>
-<% end %>
+	<!-- LIST STAFFED EMPLOYEES AND FILTER -->
+	<div class="row"><div class="span4 formfilter">
+      <%= form_tag root_url, :method => 'get' do %> <!-- Creates the form filter -->      
+      
+        <div class="row"><div class="span4"><%= submit_tag "Filter Data", :name => nil , :class => "btn span4 "%></div></div>
+
+        <div class="row"><div class="span4 displayinline">
+          <label for="startdate">From</label>
+			    <%= text_field(:from, '', :value => @myfrom.strftime('%h %-d %Y'), :class => "span1", :id => "startdate") %>
+          <label for="enddate">To</label>
+	  		  <%= text_field(:to, '', :value => @myto.strftime('%h %-d %Y'), :class => "span1", :id => "enddate") %>
+      	</div></div> <!-- filterform -->
+       
+
+        <div class="row themecolor"> 
+          <div id="listFilterProjects" class="span2"><!-- List Projects -->
+				<p>Employees staffed to this project</p>
+			      <%= render 'users/filterlist' %>
+          </div> <!-- List Projects -->    
+      	</div> <!-- ProjectList Row -->
+      
+
+      <% end %>
+    </div></div>
+
+
+    <div class="span7 datatable">
+    
+      <div class="viewselect span7">
+        <div data-toggle="buttons-radio">
+
+          <%= link_to "Entries", entrytable_path(:sort => "cal_date", :direction => "desc",
+      											   :myfrom => @myfrom, :myto => @myto, 
+      											   :filter_projects => @filter_projects,
+      											   :filter_employees => @filter_employees, 
+												   :is_user_page => true), 
+      					:remote => true, :id => "EntriesTable_btn", :class => "btn btn-info" %>
+
+      		<%= link_to "Calendar", entrycalendar_path(:sort => "cal_date", :direction => "desc",
+      											   :myfrom => @myfrom, :myto => @myto, 
+      											   :filter_projects => @filter_projects,
+      											   :filter_employees => @filter_employees), 
+      					:remote => true, :id => "EntriesCalendar_btn", :class => "offset1 btn btn-info" %>
+
+
+			<%= link_to "Trends", entrytrends_path(:sort => "cal_date", :direction => "desc",
+      											   :myfrom => @myfrom, :myto => @myto, 
+      											   :filter_projects => @filter_projects,
+      											   :filter_employees => @filter_employees), 
+      					:remote => true, :id => "EntriesTrends_btn", :class => "btn btn-info" %>
+          
+          
+        </div>
+      </div> <!-- ViewSelect -->      
+      
+             
+	  <div class="span8 details"> <!-- Details -->
+
+      <div class="selectdetails">
+    	  <div id="entrytable_sum">
+            <p class="totalrow"><%= @hrs_sum %> hours</p>
+        </div>
+    		<div id="entrytable">
+    			<%= render :partial => "entries/entries_table" %>
+    		</div>
+    		<div id="entrycalendar_sum" class="hidden">
+    			<p class="totalrow"><%= @cal_month_sum %> hours</p>
+    		</div>
+    		<div id="entrycalendar" class="hidden">
+    			<%= render :partial => "entries/entries_calendar" %>
+    		</div>
+    		<div id="entrytrends" class="hidden">
+    			<%= render :partial => "entries/entries_trends" %>
+    		</div>
+    	</div><!-- selectdetails -->	    
+	    
+	  </div> <!-- Details -->
+	
+	</div> <!-- Filter Data, Details -->
+    
+
+	<!-- LIST STAFFED EMPLOYEES -->
+	<h2 id="ProjectStaffCount">Staff - <%= @staff.count %> </h2>
+	<table class="table table-bordered table-condensed">
+	  <thead>
+	    <tr>	
+	      	<th><p>Employee</p></th>
+		    <th><p>Rate</p></th>
+	      	<th><p>Start Date</p></th>
+	      	<th><p>End Date</p></th>
+		    <th><p>Budgeted Hours</p></th>
+		    <th><p>Actual Hours</p></th>
+		    <th></th>
+	    </tr>
+	  </thead>
+	  <tbody>
+		<% @staff.each do |s| %>
+	    <tr>
+									
+	      	<td> <%= s.user.name %></td>
+	      	<td> <%= best_in_place s, :rate %></td>
+		    <td> <%= best_in_place s, :staffing_start, :type => :date %></td>
+		    <td> <%= best_in_place s, :staffing_end, :type => :date %></td>
+			<td> <%= best_in_place s, :budgeted_hrs %></td>
+			<td> <%= (hr_sum = @user_entries.find{|e| e.user_id == s.user_id}) ? hr_sum.hours_sum : 0 %></td>
+			<td>
+				<%= link_to(s, confirm: 'Are you sure?', method: :delete, 
+						    :class => "tips", :title => "Remove") do %><i class="icon-remove"></i><% end %></td>
+
+	    </tr>
+
+		<% end %>
+	  </tbody>
+	</table>
+	
+	<h1>Last Month Invoice Amount = <%= @prev_month_sum %></h1>
+	<% @prev_month_entries.each do |e| %>
+		<p><%= e.user.name %> - <%= e.hours_sum %></p>
+	<% end %>
+	
+</div><!--/.container-fluid, row-->
